--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<meta charset="utf-8" />
+    <meta charset="utf-8" />
     <title>Login</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
+            background-color: #222;
+            color: #fff;
         }
 
         .container {
             max-width: 400px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #fff;
+            background-color: #333;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
@@ -57,9 +58,9 @@
 <body>
     <div class="container">
         <h1>Login</h1>
-        <form th:action="@{/loginprocess}" method="post">
-            <input type="text" name="username" id="username" placeholder="Username" />
-            <input type="password" name="password" id="password" placeholder="Password" />
+        <form action="@{/loginprocess}" method="post">
+            <input type="text" name="username" id="username" placeholder="Username" required />
+            <input type="password" name="password" id="password" placeholder="Password" required />
             <input type="submit" value="Submit" />
         </form>
         <div th:if="${error != null}" class="error-message">Datos incorrectos.</div>
