--- a/src/main/resources/templates/persona/personasTotal.html
+++ b/src/main/resources/templates/persona/personasTotal.html
@@ -14,4 +14,6 @@
         <td th:text="${p.nombres}"></td>
         <td th:text="${p.dni}"></td>
         <td th:text="${p.pais}"></td>
+	    <td th:if="${p.avatar != null}" th:text="${p.avatar.email}"></td>
+	    <td th:if="${p.avatar != null}" th:text="${p.avatar.webPersonal}"></td>
     </tr>
